src/objects/APTS_Discounts_Config__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Additional_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Additional_Discounts_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Channel__c</fullName>
        <label>Local Channel</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <description>Enter description for discount config rule</description>
        <inlineHelpText>Enter description for discount config rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Config_Name__c</fullName>
        <formula>TEXT(APTS_Country__c) + &apos;/&apos; + RecordType.Name + &apos;-&apos; + IF( NOT(ISBLANK(TEXT(APTS_Quote_Record_Type__c))),TEXT(APTS_Quote_Record_Type__c) , TEXT(APTS_Record_Type__c)) + &apos;/&apos; + APTS_Local_Channel__r.APTS_Code__c + &apos;/&apos; + TEXT(APTS_Division__c)</formula>
        <label>Discount Config Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>LP</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_MS__c</fullName>
        <inlineHelpText>More than one hierarchy level can be selected. This will allow the sales rep to &apos;Add to Cart&apos; the chosen hierarchy levels.</inlineHelpText>
        <label>Hierarchy Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level__c</fullName>
        <label>Hierarchy Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
		<fullName>APTS_Local_Channel__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Local Channel</label>		
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Local Channel</value>
            </filterItems>
            <filterItems>
                <field>$User.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>APTS_Master_Picklist_Table__c.APTS_Locale__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
		<referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
		<relationshipLabel>Discounts Config</relationshipLabel>
		<relationshipName>Discounts_Config</relationshipName>
		<type>Lookup</type>
	</fields>
    <fields>
        <fullName>APTS_Net_Discount_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Net Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Discount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Net Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Record_Type__c</fullName>
        <inlineHelpText>Select quotation record type. For Spain, there is only one called LP</inlineHelpText>
        <label>Quotation Classification</label>
        <picklist>
            <picklistValues>
                <fullName>LP</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Record_Type__c</fullName>
        <inlineHelpText>Select MSPA record type.</inlineHelpText>
        <label>MSPA Classification</label>
        <picklist>
            <picklistValues>
                <fullName>MSPA</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Substitute_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Substitute Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Substitutional_Discounts_Hierarchy__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Substitute Discount</label>
        <type>Checkbox</type>
    </fields>
    <label>Discount Config</label>
    <listViews>
        <fullName>APTS_Spain_Discount_Config_MSPA</fullName>
        <columns>NAME</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Record_Type__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Record_Type__c</field>
            <operation>equals</operation>
            <value>MSPA</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_MSPA</value>
        </filters>
        <label>Spain Discount Config MSPA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_Spain_Discount_Config_Quotation</fullName>
        <columns>NAME</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Quote_Record_Type__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Quote_Record_Type__c</field>
            <operation>equals</operation>
            <value>LP</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_Discounts_Config__c.APTS_Quotation</value>
        </filters>
        <label>Spain Discount Config Quotation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_Quote_Record_Type__c</columns>
        <columns>APTS_Record_Type__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_IsActive__c</columns>
        <columns>APTS_Hierarchy_Level_MS__c</columns>
        <columns>APTS_Net_Discount__c</columns>
        <columns>APTS_Substitutional_Discounts_Hierarchy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Discounts Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discounts Config</pluralLabel>
    <recordTypes>
        <fullName>APTS_MSPA</fullName>
        <active>true</active>
        <description>MSPA Discounts Config</description>
        <label>MSPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Quotation</fullName>
        <active>true</active>
        <description>Quotation Discounts Config</description>
        <label>Quotation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APTS_Missing_Hierarchy_Discounts</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(APTS_Additional_Discounts_Hierarchy__c),
NOT(APTS_Substitutional_Discounts_Hierarchy__c)
)</errorConditionFormula>
        <errorMessage>Please check at least one value from hierarchy discounts section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_Missing_Hierarchy_Level</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(APTS_Hierarchy_Level_MS__c)</errorConditionFormula>
        <errorDisplayField>APTS_Hierarchy_Level_MS__c</errorDisplayField>
        <errorMessage>Please select value for hierarchy level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_Missing_Product_Discounts</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(APTS_Net_Discount__c),
NOT(APTS_Additional_Discount__c),
NOT(APTS_Substitute_Discount__c)
)</errorConditionFormula>
        <errorMessage>Please check at least one value from product discounts section</errorMessage>
    </validationRules>
</CustomObject>